--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h1>Welcome to my wordplay game!</h1>
-    <p>To start, inspect and open the console then refresh the page!</p>
+    <p>To start: inspect, open the console, then refresh the page!</p>
     <script src="app.js"></script>
     <script src='words_alpha.js'></script>
   </body>
