--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
     <h1>Welcome to my wordplay game!</h1>
     <p>To start: inspect, open the console, then refresh the page!</p>
+    <script src="words_alpha.js"></script>
     <script src="app.js"></script>
-    <script src='words_alpha.js'></script>
   </body>
 </html>
